Release notes take the form of the following optional categories:
[Optional short blurb/summary]
* Breaking changes
* Security
* Features
* Bug fixes
* Cleanups

portage-3.0.65 (UNRELEASED)
--------------

TODO

portage-3.0.64 (2024-04-28)
--------------

Features:
* Scheduler: Support parallel-install with merge-wait (bug #256616, bug #925213).

  This makes the (future) improvement mentioned in portage-3.0.62's NEWS.

* phase-functions: prematurely delete WORKDIR if FEATURES=merge-wait

  The 'merge-wait' feature could lead to running out of disk space on
  PORTAGE_TMPDIR's filesystem because many more workdirs were kept around
  until merging was queued up. We now purge the workdirs but keep the image
  around until merging.

* Start to record REPO_REVISIONS in build-info in VDB (bug #924772).

  Ultimately the intention is to expose this information in binhost
  metadata so that clients can select consistent revisions of source
  repositories.

* util: file_copy: Support btrfs's FICLONE ioctl for fast file clones.

  Added when implementing the below 'src: Drop linux_reflink C module.'
  cleanup.

* sync: Add new 'zipfile' sync-type.

  This allows fetching ebuild repositories via snapshots from e.g. GitHub,
  gitweb, cgit.

Bug fixes:
* ctypes: Add workaround for loading libc on musl.

* util: set a timeout for urlopen calls (bug #926221).

* SpawnProcess: Fix noise / warnings caused by set_term_size (bug #923750, bug #925456).

* binpkg, gpkg: Add missing newlines to error messages.

* writable_check: Improve whitespace handling when parsing /proc/self/mountinfo (bug #925888).

* doebuild: Call _setup_locale (bug #925863).

  This is needed to more robustly handle invalid or inappropriate locale settings.

* binarytree._populate_remote: Fix UnboundLocalError for binpkg-request-signature (bug #926048).

* elog/mod_custom: Spawn processes in background (bug #925907).

  Fixes a noisy crash on exit.
